# ChangeLog for dev-python/rpy
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/rpy/ChangeLog,v 1.78 2014/04/30 11:48:07 jlec Exp $

  30 Apr 2014; Justin Lecher <jlec@gentoo.org> rpy-2.3.10.ebuild, metadata.xml:
  Add pypi HOMEPAGE

*rpy-2.3.10 (22 Apr 2014)

  22 Apr 2014; Sébastien Fabbro <bicatali@gentoo.org> +rpy-2.3.10.ebuild,
  -rpy-2.3.8.ebuild, -rpy-2.3.9.ebuild:
  Version bump, fixing bug #508408

  25 Mar 2014; Ian Delaney <idella4@gentoo.org> rpy-2.3.8.ebuild,
  rpy-2.3.9.ebuild:
  Add PYTHON_REQ_USE, fixes Bug #501558 by M. Johnson, rm old

*rpy-2.3.9 (12 Feb 2014)

  12 Feb 2014; Sébastien Fabbro <bicatali@gentoo.org> +rpy-2.3.9.ebuild,
  -rpy-2.3.6.ebuild, rpy-2.3.8.ebuild:
  Version bump

*rpy-2.3.8 (28 Oct 2013)

  28 Oct 2013; Patrick Lauer <patrick@gentoo.org> +rpy-2.3.8.ebuild:
  Bump

  04 Jun 2013; Sébastien Fabbro <bicatali@gentoo.org> -rpy-2.2.6-r1.ebuild,
  -rpy-2.3.1.ebuild, -rpy-2.3.2.ebuild, -rpy-2.3.3.ebuild, -rpy-2.3.4.ebuild,
  metadata.xml:
  Removed old

*rpy-2.3.6 (29 Apr 2013)

  29 Apr 2013; Justin Lecher <jlec@gentoo.org> +rpy-2.3.6.ebuild:
  Version BUmp

*rpy-2.3.4 (18 Mar 2013)

  18 Mar 2013; Justin Lecher <jlec@gentoo.org> +rpy-2.3.4.ebuild:
  Version BUmp; still not py3 ready as pandas is not

  07 Mar 2013; Justin Lecher <jlec@gentoo.org> rpy-2.3.3.ebuild:
  Add missing test dep

*rpy-2.3.3 (07 Mar 2013)

  07 Mar 2013; Justin Lecher <jlec@gentoo.org> rpy-2.3.2.ebuild,
  +rpy-2.3.3.ebuild:
  Version Bump; drop py support to version 2.7, #458700

*rpy-2.3.2 (22 Feb 2013)

  22 Feb 2013; Justin Lecher <jlec@gentoo.org> +rpy-2.3.2.ebuild, metadata.xml:
  Version Bump, #458700; move to new python eclasses

*rpy-2.3.1 (03 Jan 2013)

  03 Jan 2013; Sébastien Fabbro <bicatali@gentoo.org> +rpy-2.3.1.ebuild,
  -rpy-2.1.9.ebuild, -rpy-2.2.5.ebuild, metadata.xml:
  Version bump

  20 Nov 2012; Agostino Sarubbo <ago@gentoo.org> rpy-2.2.6.ebuild: