@@ -1,28 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-DIST rpy2-2.2.6.tar.gz 167112 SHA256 7e6b3ac86edcc66e59a98d5821581e36d4bfe9552d7f2da95610b730e5f0ef28 SHA512 6ef901f7c9829ac7c574bb2ca8a986d7e5a5685167067f50d6e815f3ec0022224306dbf3ad8ee809b441ff8ad8eac53b414203d51f41e5602193e775c6b9a5cc WHIRLPOOL a7ed12874626b2f018d9da409e3f468e276247c5c7829e95abf1850a7557876606394e2766f0d0b44810ceaae0f9ac8d1a656c09008e49ceafd8d1330ba961b1
 DIST rpy2-2.3.10.tar.gz 187420 SHA256 728326d6d13107f7156f1f3d6ad3a7d6a19ae4d6801e56708e794196d5b0a509 SHA512 58013019bb71c28b0c890a599687628d94fc0a59f7071177618d8494eca485eb08ae9f7d27cf529fe973b01254c00373130b68c8ce863b69f8dcfa54bd5bf9f8 WHIRLPOOL bf8e8c19b75622eb5c923496d0ae1625f3196d3e760fbf60558f692847f0a35a3a1f2112951cb48fa5c9c111fdc145e0babe99f489aa29033b9e21edf0b6180e
-EBUILD rpy-2.2.6.ebuild 988 SHA256 391d64ebfaf12f589d8acd363a1ea143025c0ae49ccbe84e773a42c05355dcf0 SHA512 ddcb0f725edb5c9218ccfa8bacdf3ff8b184c4566bb002ea3088c9d95171570f4800654f13d136e7a20c628ec2878b23267438f512a504b86340076fe70252f1 WHIRLPOOL d6494869c5dbda9f6cddb959cd8ea2495681136f8cef62bf51b635807071f5a23a3b75a14ce9e4399f242e1bee3bb067f2d51e2957d18be7d95f83b1a4f29b03
+DIST rpy2-2.4.0.tar.gz 160914 SHA256 3cb6360d4d0af7996979f50d0347f5f74fc3fcf98e3ee8057c4c886b358d17e1 SHA512 cd6432ba2f5c4f0e8e0a49e473efd917cfd279f435dc4fa31e417a725085937126ea2435f43f2a9fdd01f2d4f53698f1684375885525fba095ad657e7890facf WHIRLPOOL f67c5ddb7fd3576bf3cc143d6be4b803e49f3b56154c2ad7689a0c90511e7d037b370fa76b64a7d8b72dd49b5850c96382bdd3f67b0145afd68959a8112150b0
 EBUILD rpy-2.3.10.ebuild 905 SHA256 eca2695fb63dbc9256d93790f17bb931a9f5ddaf7191d8fca20b90df45166e76 SHA512 48b3ffdce6a5f1e0042efed7113d01a770a0737150a14eb4542a7e6970c7f92f721de23308397ea93ede29c03764c04b8442e9de86dd74c623d6047e6d81e54d WHIRLPOOL 28bc101647d94994c9c823ef20ba14e0ef8bc89bb349c976c6129779e13e571d79388af53b76c2c198570450513ba4a72a208300a044b572dfd87eda3a30879c
-MISC ChangeLog 11857 SHA256 fc2d01347ef7e0db6454615833b45b38e11de250ead437d8b07d9482149944c3 SHA512 4c43e9bf425e56255fe3a19ba5fe16f84eac4744db0c3b769075317a91b42683e6a26b0191d3688e5819490b3b71cc5b4e6cae43231ffa3ed5be22f581500e2d WHIRLPOOL ad3a0d2f6244f23b7a58c06c7640edd70a93e3c4fee995a99a47369633dbde2a956229a55ee16f68c853ec9e26227194f101f8a782371b908976c5bbcc9e2912
+EBUILD rpy-2.4.0.ebuild 907 SHA256 4ce83df4379f67c50903fb6a5dad43a38e165b8e6608060bdd59d8d44009c612 SHA512 c470931ac4e5b6c790b5a7ea294a66855547d486c207de239ee569f4f5613e531d936da431d193702e755616e8301e581f00432c951c03bbd38ac167e8a401e0 WHIRLPOOL 0afb16045746feb1db6f546c860596fe1df030714a49c313f7106131df066a7e3d87169eb5bb638dbfec22fde53be4ec546331e8c8e1927bc27f4b8111188e79
+MISC ChangeLog 11994 SHA256 c80eb58608043bae6d46ed4336f8b7d99dcee0114fd6cfeeb73b2c5c475484cc SHA512 5fd5430e5e7d089f3c9698cfd84c4ffdf9509de5072c542871155b2cab2dbf559fc8875e82ec2c9a0ff0e177c54320ba8ef92c74c45175c21da9df894a5e3bd2 WHIRLPOOL 594053496b01b7be22dd6a2260a9e763420331783d6d7b7ece43d052df5572e81775a21b3c030a0cb394a3534a1882652944a2cc5acd32d5173935603204a96f
 MISC metadata.xml 512 SHA256 03c293717594aa787019e8716891d2eea067135a4e77d7f0a53317979087e695 SHA512 c25e12c24dd9cd06122e64975fb9760cd50dfda61f0fe808e780c466fd1b105bdba09cdebd0d4d0f529570c2cc6fac3334296bdf12208a8ff74535552af63e4d WHIRLPOOL 52b27f13223e5e1e9805913369a69ee947a295ba109e29e0c2a53b4b183c1580d56b34f83c8b96de91693d228f117d36a3b6e79bb3c02501cefea1d801d4a17a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCgBmBQJTYOL4XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirMpoP/3+/3SSb6WeIfkKsyKCWohAA
-5Sp7wvtfIztLSfuzONzkA1ltdwYKw+w3navnIPfbCyPckErsEUK3xpQjNAzDe8CA
-Ur8fmiTCsl9Qs0REUWp2kcIiE6bHusxJt7RyMSAxyMnfEulwN5GjQngQwL1W/w5K
-4RhMxcboSokbRWjrMR2GA9nBPb4dwgy3KDN/sfRx+S4DGjjZdqi4Jp6zQtw4gESe
-q23ZOou5bJS+HtQk3f0Xz5KZIFnUUt4YC1Z9SuEyqhOikC7WfFTT2dyYLCOhkUuU
-ddev4FTPu3FxafmcVGXGF5tboJ+2Jk85sLZHuH5h3B1+0KqaXXmLun61TyIgya8g
-ZPJ0mPjanTckUI5gUfCtH+vcYMda3gvezw5POmqSQw82O81Yb5TYk4q3l4dGAp/d
-7fGohg/LFnzIItCQp1Qcpny9wzvovj3rNXGGIkm9EFn/B6UTjqRtF8wFIKbi2knC
-ATj4KCRWVYLE4h/zFbMeaP5y1211awBddUCtfLxkCO5Fqye2aaBtrApa0wupwJ6e
-Aa28iKeWsrKJXHAyNn+/bb0yb7IbbYEfaYd8fk2L/VyfSJh0Bm5dYYWAzNevztgz
-iu4sua1xpUP7Yb5zwoa1zEObwarcLoWeFaWJ1qfeTBLRVCwhUDUKirvnq9rzok1O
-Q7NEe6rNYvJwP04mnhyL
-=yBJD
+iEYEAREIAAYFAlONXokACgkQso7CE7gHKw2UIQCgsqUKkBYrHODvcLY8CQt6+sPH
+VSYAoNnJwypuTFbS6X3XxISiqgXLwZL0
+=rHgF
 -----END PGP SIGNATURE-----
