@@ -1,12 +1,12 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rack/rack-1.4.5-r3.ebuild,v 1.1 2014/06/02 18:26:04 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rack/rack-1.4.5-r3.ebuild,v 1.2 2014/06/03 05:52:49 graaff Exp $
 
 EAPI=5
 USE_RUBY="ruby19 ruby20 jruby"
 
 RUBY_FAKEGEM_DOCDIR="doc"
-RUBY_FAKEGEM_EXTRADOC="ChangeLog KNOWN-ISSUES README.rdoc SPEC"
+RUBY_FAKEGEM_EXTRADOC="KNOWN-ISSUES README.rdoc SPEC"
 
 RUBY_FAKEGEM_BINWRAP=""
 
