@@ -1,12 +1,0 @@
-DEFINED_PHASES=compile install postinst postrm prepare setup test
-DEPEND=>=dev-lang/R-2.8 dev-python/numpy !<=dev-python/rpy-1.0.2-r2 dev-lang/python
-DESCRIPTION=Python interface to the R Programming Language
-EAPI=4
-HOMEPAGE=http://rpy.sourceforge.net/ http://pypi.python.org/pypi/rpy2
-KEYWORDS=amd64 x86 ~amd64-linux ~x86-linux
-LICENSE=GPL-2 LGPL-2.1 MPL-1.1
-RDEPEND=>=dev-lang/R-2.8 dev-python/numpy !<=dev-python/rpy-1.0.2-r2 dev-lang/python
-SLOT=0
-SRC_URI=mirror://pypi/r/rpy2/rpy2-2.2.6.tar.gz
-_eclasses_=distutils	34e0f373c466bb0e97ba194735f1acf2	multilib	fac675dcccf94392371a6abee62d909f	python	be9965681d83c3980660a2660ac95e95	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=5674829635d2e0880aa9f09e15a02884
