@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=>=dev-lang/R-3 dev-python/numpy[python_targets_python2_7(-)?,python_targets_python3_3(-)?,-python_single_target_python2_7(-),-python_single_target_python3_3(-)] test? ( >=dev-python/pandas-0.13[python_targets_python2_7(-)?,python_targets_python3_3(-)?,-python_single_target_python2_7(-),-python_single_target_python3_3(-)] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[sqlite] ) python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3[sqlite] ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_targets_python3_3(-)?,-python_single_target_python2_7(-),-python_single_target_python3_3(-)]
+DESCRIPTION=Python interface to the R Programming Language
+EAPI=5
+HOMEPAGE=http://rpy.sourceforge.net/ https://pypi.python.org/pypi/rpy2
+IUSE=test python_targets_python2_7 python_targets_python3_3
+KEYWORDS=~amd64 ~x86 ~amd64-linux ~x86-linux
+LICENSE=AGPL-3 GPL-2 LGPL-2.1 MPL-1.1
+RDEPEND=>=dev-lang/R-3 dev-python/numpy[python_targets_python2_7(-)?,python_targets_python3_3(-)?,-python_single_target_python2_7(-),-python_single_target_python3_3(-)] python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[sqlite] ) python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3[sqlite] ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_targets_python3_3(-)?,-python_single_target_python2_7(-),-python_single_target_python3_3(-)]
+REQUIRED_USE=|| ( python_targets_python2_7 python_targets_python3_3 )
+SLOT=0
+SRC_URI=mirror://pypi/r/rpy2/rpy2-2.4.0.tar.gz
+_eclasses_=distutils-r1	0ffe72d093023ff4f69e4ceaf6f63e4e	eutils	025442f2eecab39ad0b4e541b6e142af	multibuild	46527a4656956da3d58acff72c9b59b1	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	python-r1	6f0183db47dc66fccb7a6899f7209b48	python-utils-r1	8ba35e0dacf49c6cae65901d183c971f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=b7950b8aec7be349c95a760801c10653
