@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/rack
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rack/ChangeLog,v 1.127 2014/06/02 18:26:04 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rack/ChangeLog,v 1.128 2014/06/03 05:52:49 graaff Exp $
+
+  03 Jun 2014; Hans de Graaff <graaff@gentoo.org> rack-1.4.5-r3.ebuild,
+  rack-1.5.2-r3.ebuild:
+  Remove ChangeLog since it is either empty or non-existant, bug 512202.
 
 *rack-1.5.2-r3 (02 Jun 2014)
 *rack-1.4.5-r3 (02 Jun 2014)
