@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/rpy
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/rpy/ChangeLog,v 1.78 2014/04/30 11:48:07 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/rpy/ChangeLog,v 1.79 2014/06/03 05:42:56 idella4 Exp $
+
+*rpy-2.4.0 (03 Jun 2014)
+
+  03 Jun 2014; Ian Delaney <idella4@gentoo.org> +rpy-2.4.0.ebuild,
+  -rpy-2.2.6.ebuild:
+  bump; remove old
 
   30 Apr 2014; Justin Lecher <jlec@gentoo.org> rpy-2.3.10.ebuild, metadata.xml:
   Add pypi HOMEPAGE
